--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="container">
+    <main>
       <div class="card">
         <div class="card-img">
           <img class="qr-code-img" src="images/image-qr-code.png" alt="qr-code-img" />
         </div>
         <div class="card-body">
-          <h3>Improve your Frontend-skill by building projects</h3>
+          <h1>Improve your Frontend-skill by building projects</h1>
           <p>Scan the QR code to visit the frontend mentor and take your coding skills to the next level</p>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
